[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "choH"
version = "1.0.0"
maintainers = [
  { name="Daniel Grose", email="dan.grose@lancaster.ac.uk" },
]
authors = [
  { name="Daniel Grose", email="dan.grose@lancaster.ac.uk"},
]
description = "Determine log likelihood of a changepoint for each location in ordered data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "scipy","pytest",
]

[project.urls]
homepage = "https://github.com/grosed/choH-python"